fixed layout bug in editing profiles modal

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ button {
 }
 
 .edit, .delete {
-	margin:0 2% 0 2%;
+	margin:0 1% 0 1%;
 	cursor:pointer;
 }
 
